--- a/클래스.md
+++ b/클래스.md
@@ -55,3 +55,6 @@ person class 정의 ->
 student class 정의(student class는 person class를 상속 받는다) ->
 Student class 인스턴스를 바탕으로 student객체 생성 ->
 student 객체에서 속성에 접근하여 출력
+
+# Interface
+
