--- a/클래스.md
+++ b/클래스.md
@@ -59,5 +59,41 @@ student 객체에서 속성에 접근하여 출력
 # Interface
 
 ```java
+interface Person {
+    int getAge();
+    String getName();
+}
 
+class Student implements Person {
+    private int age;
+    private String name;
+    private String school;
+
+    public Student(int age, String name, String school) {
+        this.age = age;
+        this.name = name;
+        this.school = school;
+    }
+    public int getAge() {
+        return age;
+    }
+    public String getName() {
+        return name;
+    }
+    public String getSchool() {
+        return school;
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        Student student = new Student(17, "김구현", "경소고");
+        System.out.println(student.getAge());
+        System.out.println(student.getName());
+        System.out.println(student.getSchool());
+    }
+}
 ```
+Person 인터페이스 정의 ->
+Student 클래스가 Person 인터페이스를 구현 ->
+Main 클래스에서 stuent 객체 생성 및 출력 
